@@ -136,7 +136,7 @@ array (
   'a' => 
   array (
     'background' => '1px',
-    'background-color' => '#1',
+    'background-color' => '1',
     'background-image' => '1',
     'background-repeat' => '1',
     'background-attachment' => '1',
@@ -146,11 +146,11 @@ array (
     'border-right' => '1px',
     'border-bottom' => '1px',
     'border-left' => '1px',
-    'border-color' => '#1',
-    'border-top-color' => '#1',
-    'border-bottom-color' => '#1',
-    'border-left-color' => '#1',
-    'border-right-color' => '#1',
+    'border-color' => '1',
+    'border-top-color' => '1',
+    'border-bottom-color' => '1',
+    'border-left-color' => '1',
+    'border-right-color' => '1',
     'border-style' => '1',
     'border-top-style' => '1',
     'border-right-style' => '1',
@@ -168,7 +168,7 @@ array (
     'content' => '1',
     'clear' => '1',
     'clip' => '1',
-    'color' => '#1',
+    'color' => '1',
     'counter-reset' => '1',
     'counter-increment' => '1',
     'cursor' => '1',
@@ -207,7 +207,7 @@ array (
     'outline' => '1px',
     'outline-width' => '1px',
     'outline-style' => '1',
-    'outline-color' => '#1',
+    'outline-color' => '1',
     'padding' => '1px',
     'padding-top' => '1px',
     'padding-right' => '1px',
