@@ -29,6 +29,7 @@ Key: # = backwards incompatible change, ! = new feature, - = bugfix.
 ! Support for CSS3 animations
 ! Support for optimizing colors inside gradient function
 ! Normalize all possible single quotes to double quotes (for smaller gzipped file)
+! Convert unit to most smaller (for example 100px -> 75pt)
 - Added localizations for css_optimiser.php
 - Fixed bug with cookie setting for custom templates
 - Minor security problem in css_optimiser.php fixed
@@ -44,3 +45,4 @@ Key: # = backwards incompatible change, ! = new feature, - = bugfix.
 - Fixed parsing gradient function
 - Fixed incorrect removing quotes from quotes property value
 - Fixed parsing comments after property or selector
+- Dont add hash character (#) before non hex values
